--- a/13.html
+++ b/13.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=CjXFHx"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=CjXFHx" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=995VHf"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=995VHf" type="text/css">
 
   
   <!--<meta name="adopt-website-id" content="6a8616c2-f959-43c9-a0a3-305a9a0b59af" />
@@ -74,10 +74,10 @@ class="adopt-injector"></script>-->
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide carousel-fade" id="ubSRQJ8kbA" data-ride="carousel" data-bs-ride="carousel" data-interval="6000" data-bs-interval="6000">
+                <div class="carousel slide carousel-fade" id="ubT3dWUQsx" data-ride="carousel" data-bs-ride="carousel" data-interval="6000" data-bs-interval="6000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ubSRQJ8kbA" data-bs-target="#ubSRQJ8kbA"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ubSRQJ8kbA" data-bs-target="#ubSRQJ8kbA"></li><li data-slide-to="2" data-bs-slide-to="2" data-target="#ubSRQJ8kbA" data-bs-target="#ubSRQJ8kbA"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#ubSRQJ8kbA" data-bs-target="#ubSRQJ8kbA"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ubT3dWUQsx" data-bs-target="#ubT3dWUQsx"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ubT3dWUQsx" data-bs-target="#ubT3dWUQsx"></li><li data-slide-to="2" data-bs-slide-to="2" data-target="#ubT3dWUQsx" data-bs-target="#ubT3dWUQsx"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#ubT3dWUQsx" data-bs-target="#ubT3dWUQsx"></li>
                         
                         
                     </ol>
@@ -107,11 +107,11 @@ class="adopt-injector"></script>-->
                             <a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html"><img class="d-block w-100" src="assets/images/banner-1600x370.webp" alt="" data-slide-to="3" data-bs-slide-to="3"></a></div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ubSRQJ8kbA">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ubT3dWUQsx">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ubSRQJ8kbA">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ubT3dWUQsx">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
